--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <title>TD - Prueba técnica</title>
 </head>
 <body>
-    <main>
+    <main id="main">
         <div class="input">
+            <button id="themeBtn" >Cambiar Tema</button>
             <input type="text" placeholder="Ingrese el producto de su agrado">
-            <button type="button" id="searchBtn">BUSCAR</button>
+            <input type="text" placeholder="Categoria">
+            <input type="text" placeholder="Precio Máximo">
+            <button id="searchBtn">Buscar</button>
         </div>
 
         <div class="products__grid">
 
         </div>
+
+        
     </main>
+    <script src="./app.js"></script>
 </body>
 </html>
