--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <main id="main">
         <div class="input">
             <button id="themeBtn" >Cambiar Tema</button>
-            <input type="text" placeholder="Ingrese el producto de su agrado">
-            <input type="text" placeholder="Categoria">
-            <input type="text" placeholder="Precio Máximo">
+            <input type="text" id="productName" placeholder="Ingrese el producto de su agrado">
+            <input type="text" id="" placeholder="Categoria">
+            <input type="text" id="" placeholder="Precio Máximo">
             <button id="searchBtn">Buscar</button>
         </div>
 
-        <div class="products__grid">
+        <div class="products__grid" id="productsGrid">
 
         </div>
 
