--- a/index.html
+++ b/index.html
@@ -1,30 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <title>TD - Prueba técnica</title>
-</head>
-<body>
-    <main id="main">
-        <div class="input">
-            <button id="themeBtn" >Cambiar Tema</button>
-            <input type="text" id="productName" placeholder="Ingrese el producto de su agrado">
-            <input type="text" id="" placeholder="Categoria">
-            <input type="text" id="" placeholder="Precio Máximo">
-            <button id="searchBtn">Buscar</button>
-        </div>
+# td-prueba
 
-        <div class="products__grid" id="productsGrid">
+## Análisis
+Primero analice los requerimientos del ejercicio, en este caso, una página web que pueda buscar y filtrar productos de una API pública.
 
-        </div>
+## Desarrollo
+1.- Buscar una API pública, en este caso escogí Fake Store API.
 
-        
-    </main>
-    <script src="./app.js"></script>
-</body>
-</html>
+2.- Diseñar un formulario sencillo para poder filtrar las busquedas, constaria de un input tipo text para filtrar por el nombre del producto, tambien de un input como un dropdown para poder elegir la categoria, y finalmente un input para poder filtrar por precios.
+
+3.- Realizar un diseño simple y responsivo usando media queries, variables en css, y flexbox.
+
+## Ejecución
+
+1.- Diseño el html y css para que tenga un diseño responsivo y se puede cambiar de tema
+
+2.- La programación de la API me apoye de chat gpt, para poder realizar la busqueda por nombre
